Bug Fix: Icons visible even on no hover

--- a/src/application/css/Explorer.css
+++ b/src/application/css/Explorer.css
@@ -2,10 +2,14 @@
     margin-left: 10px;
 }
 
-.tree-item {
-    cursor: pointer;
-}
-
 .tree-item:hover {
     background-color: gray;
+}
+
+.tree-item .container{
+    visibility: hidden;
+}
+
+.tree-item:hover .container {
+    visibility: visible;
 }
